Add non-interactive exec
